--- a/index.html
+++ b/index.html
@@ -15,16 +15,30 @@
 </head>
 
 <body class="open-sans-mary">
-    <sec>
+    <header class="header">
         <nav>
-            <h3 class="nav-title" >Ma<span class="r-color">r</span>y</h3>
+            <h3 class="nav-title">Ma<span class="r-color">r</span>y</h3>
             <ul>
                 <li><a href="" class="dark-2">Portfolio</a></li>
                 <li><a href="" class="dark-2">Blog</a></li>
                 <li><a href=""><button class="btn-primary">Hire me</button></a></li>
             </ul>
         </nav>
-    </sec>
+
+        <div class="banner">
+            <div class="banner-content">
+                <h4 class="banner-greet">Hi, I am</h4>
+                <h1 class="banner-name">Ariful Islam</h1>
+                <p class="banner-para"> Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning
+                    because as to society behaved moments</p>
+            </div>
+            <button class="bt-cv">Download CV</button>
+            <button class="btn-contact"><span class="btn-text2">Contact</span></button>
+            <img src="images/hardy.png" alt="" class="banner-img">
+           
+        </div>
+        
+    </header>
 </body>
 
 </html>
