--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="open-sans-mary">
-    <header class="header">
+    <header class="header secondary-bg">
         <nav>
             <h3 class="nav-title">Ma<span class="r-color">r</span>y</h3>
             <ul>
@@ -28,17 +28,163 @@
         <div class="banner">
             <div class="banner-content">
                 <h4 class="banner-greet">Hi, I am</h4>
-                <h1 class="banner-name">Ariful Islam</h1>
-                <p class="banner-para"> Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning
-                    because as to society behaved moments</p>
+                <h1 class="banner-title">Ariful Islam</h1>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
+                    Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+                <Button class="btn-primary">Contact</Button>
+
             </div>
-            <button class="bt-cv">Download CV</button>
-            <button class="btn-contact"><span class="btn-text2">Contact</span></button>
-            <img src="images/hardy.png" alt="" class="banner-img">
-           
+            <img src="images/hardy.png" alt="" class="banner-profilepic">
         </div>
-        
     </header>
+    <main>
+        <section class="about secondary-bg">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing
+                simple, clean and slick websites that provide real value to the end user. Thousands of clients have
+                procured exceptional resulfs while working with me. Delivering work within time and budget which meets
+                clients requirements in our mata.</p>
+            <div class="about-items">
+                <div class="about-item">
+                    <p class="item-title">Name</p>
+                    <p class="item-description">Ariful Islam</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Email</p>
+                    <p class="item-description">2215151056@uits.edu.bd</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Date of Birth</p>
+                    <p class="item-description">July 23,2000</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">From</p>
+                    <p class="item-description">Dhaka, Bangladesh</p>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="skills about">
+            <h3 class="section-title">What I Do</h3>
+            <p class="section-description">
+                I have more than 10 years experience building software for clients all over the world. Below is a quick
+                overview of my main technical skill sets and technologies i use. Want to find out more about my
+                experience? Check out my online resume and project portfolio.
+            </p>
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h4 class="skill-title">Vanilla Javascript</h4>
+                    <div class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h4 class="skill-title">React</h4>
+                    <div class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h4 class="skill-title">Node JS </h4>
+                    <div class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h4 class="skill-title">MongoDB</h4>
+                    <div class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                </div>
+            </div>
+        </section>
+        <section class="resume">
+            <h3 class="section-title">A Summary of My Resume</h3>
+            <div class="resume-container">
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experiecne-subtitle">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experiecne-subtitle">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experiecne-subtitle">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Experience</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Sr. Font End Developer</h4>
+                        <h5 class="experiecne-subtitle">Apple Inc / 2020 - Current</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+
+                    <div class="experience">
+                        <h4 class="experience-title">Jr. Font End Developer</h4>
+                        <h5 class="experiecne-subtitle">Dribbble Inc / 2018 - 2022</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+
+                    <div class="experience">
+                        <h4 class="experience-title">HTML Developer</h4>
+                        <h5 class="experiecne-subtitle">Adobe Inc / 2017 - 2018</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <button class="btn-primary resume-download-btn">Download CV</button>
+        </section>
+
+
+    </main>
+    <footer class="secondary-bg footer-final">
+        <div class="footer-column">
+            <h3 class="section-title">Lets Connet</h3>
+            <p class="section-description">Please fill out the form on this section to contact with me or call
+                between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <div>
+                    <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                    <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                    <a href=""><img src="images/icons/insta.png" alt=""></a>
+                </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">Let's Message Me</h3>
+            <Form><input type="text" name="Your Name" id="name" placeholder="Your Name" class="form-name"></Form><br>
+            <Form><input type="text" name="Your Email" id="email" placeholder="Your Email" class="form-name"></Form><br>
+            <textarea name="Message" id="message" placeholder="Message" cols="60" rows="10" class="message"></textarea><br>
+
+            <button class="btn-primary">Submit</button>
+        </div>
+    </footer>
+
+
 </body>
 
 </html>
